# arcade

./: CMakeLists.txt  README.md  game.cpp  game.h  main.cpp  palette.h  random.cpp  types.h
actors/: actor.cpp  actor.hpp  asteroid.cpp  asteroid.h  enemy.cpp  enemy.h  enemy_projectile.cpp  enemy_projectile.h  follow_projectile.cpp  follow_projectile.h  projectile.cpp  projectile.h  ship.cpp  ship.h  ship_projectile.cpp  ship_projectile.h
components/: animated_sprite_component.cpp  animated_sprite_component.h  asteroid_move_component.cpp  asteroid_move_component.h  background_sprite_component.cpp  background_sprite_component.h  circle_component.cpp  circle_component.h  collision_component.cpp  collision_component.h  component.cpp  component.h  energy_component.h  follow_move_component.cpp  follow_move_component.h  heath_component.h  input_component.cpp  input_component.h  move_component.cpp  move_component.h  newtonian_move_component.cpp  newtonian_move_component.h  projectile_move_component.cpp  projectile_move_component.h  spawn_component.cpp  spawn_component.h  sprite_component.cpp  sprite_component.h
misc/: random.h
ui/: ui_button.cpp  ui_button.h  ui_hor_layout.cpp  ui_hor_layout.h  ui_hud.cpp  ui_hud.h  ui_layout.cpp  ui_layout.h  ui_main_menu.cpp  ui_main_menu.h  ui_settings.cpp  ui_settings.h  ui_slider.cpp  ui_slider.h  ui_statistics_hud.cpp  ui_statistics_hud.h  ui_text.cpp  ui_text.h  ui_widget.cpp  ui_widget.h
ui/figure/: circle.h
